# cryptopals

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
defs/: targets.bzl
lib/: encoding.c  encoding.h  freq.c  freq.h  helper.h  xor.c  xor.h
task/: s1c1.c  s1c2.c  s1c3.c  s1c4.c  s1c5.c  s1c6.c
