load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
  name = "crypto",
  srcs = glob(["lib/*.c"]),
  hdrs = glob(["lib/*.h"]),
  strip_include_prefix = "lib",
  visibility = ["//visibility:public"],
)

cc_test(
  name = "s1c1",
  srcs = ["task/s1c1.c"],
  size = "small",
  deps = [":crypto"],
)

cc_test(
  name = "s1c2",
  srcs = ["task/s1c2.c"],
  size = "small",
  deps = [":crypto"],
)

cc_test(
  name = "s1c3",
  srcs = ["task/s1c3.c"],
  size = "small",
  deps = [":crypto"],
)

filegroup(
  name = "s1c4_text",
  srcs = ["files/s1c4.txt"],
)

cc_test(
  name = "s1c4",
  srcs = ["task/s1c4.c"],
  size = "small",
  deps = [":crypto"],
  data = [":s1c4_text"],
)

cc_test(
  name = "s1c5",
  srcs = ["task/s1c5.c"],
  size = "small",
  deps = [":crypto"],
)

