load("@rules_cc//cc:defs.bzl", "cc_library")
load("//defs:targets.bzl", "create_targets_for_tasks_with_no_inputs", "create_targets_for_tasks_with_single_inputs")

cc_library(
  name = "crypto",
  srcs = glob(["lib/*.c"]),
  hdrs = glob(["lib/*.h"]),
  strip_include_prefix = "lib",
  visibility = ["//visibility:public"],
)

create_targets_for_tasks_with_no_inputs(
  target_names = ["s1c1", "s1c2", "s1c3", "s1c5"],
)

create_targets_for_tasks_with_single_inputs(
  target_names = ["s1c4"],
)
